# rknn2-rs

./: Cargo.toml
examples/: benchmark.rs  info.rs
rknn2-sys/: Cargo.toml  build.rs  wrapper.h
src/: lib.rs
