[package]
name = "rknn2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = { version = "2.2", features = ["bytemuck", "num-traits"] }
log = "0.4"
num_enum = "0.5"
rknn2-sys = { path = "rknn2-sys" }

[workspace]
members = [
    "rknn2-sys"
]

[dev-dependencies]
bytemuck = { version = "1.13", features = [
    "derive",
    "extern_crate_alloc",
    "extern_crate_std",
    "zeroable_maybe_uninit",
    "zeroable_atomics",
    "min_const_generics",
    "wasm_simd", ] }
pretty_env_logger = "0.4"
image = { version = "0.24" }
imageproc = "0.23"
